--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,44 +16,69 @@
 
 <body>
 
-<div class="container">
-    <!-- Header -->
+    <section class="main-container">
 
-    <nav>
-        <ul class="main-nav">             
-            <li class="nav-item"><a href="#">ABOUT</a></li>
-            <li class="nav-item"><a href="#">OFFER</a></li>
-            <li><a href="#" class="logo"><img src="logo/logo.png"></a></li>
-            <li class="nav-item"><a href="#">GALLERY</a></li>
-            <li class="nav-item"><a href="#">CONTACT</a></li>
-        </ul>
-    </nav>
+        <!-- Header -->
 
-    <!-- Header STOP -->
+        <header>
+            <nav>
+                <ul class="main-nav">
+                    <li class="nav-item"><a href="#">ABOUT</a></li>
+                    <li class="nav-item"><a href="#">OFFER</a></li>
+                    <li><a href="#" class="logo"><img src="logo/logo.png"></a></li>
+                    <li class="nav-item"><a href="#">GALLERY</a></li>
+                    <li class="nav-item"><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <!-- Section -->
+        <!-- Header STOP -->
 
-    <section class="section-content">
-        <h1 class="title">Mountain Kingdom</h1>
-        <a href="" class="btn">ENTER THE GATES</a>
+        <!-- Article -->
+
+        <article class="article-content">
+            <h1 class="title">Mountain Kingdom</h1>
+            <a href="" class="btn" id="btn-click">ENTER THE GATES</a>
+        </article>
+
+        <!-- Article STOP -->
+
+        <!-- Footer -->
+
+        <footer>
+            <ul class="main-footer">
+                <li class="footer-item"> &copy; 2019 &ensp; MOUNTAIN KINGDOM </li>
+                <li class="footer-item"> Cookies &ensp;| &ensp; Privacy </li>
+                <li class="footer-item"> Design by &ensp; <span class="lighter-text"> Wizard of Oz </span></li>
+            </ul>
+        </footer>
+
+        <!-- Footer STOP -->
+
     </section>
 
-    <!-- Section STOP -->
+    <!-- Modal section (POP UP)-->
 
-    <!-- Footer -->
+    <section class="modal-section">
 
-    <footer>
-        <ul class="main-footer">
-            <li class="footer-item"> &copy; 2019 &ensp; MOUNTAIN KINGDOM </li>
-            <li class="footer-item"> Cookies &ensp;| &ensp; Privacy </li>
-            <li class="footer-item"> Design by &ensp; <span class="lighter-text"> Wizard of Oz </span></li>
-        </ul>
-    </footer>
+        <div class="bg-modal">
+            <div class="modal-content">
+                <h2>Are you a Mountain Knight?</h2>
+                <form action="">
+                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Password">
+                    <a href="" class="btn btn-modal">LOG IN</a>
+                </form>
+            </div>
+        </div>
 
-    <!-- Footer -->
+    </section>
 
-</div>
-    
+    <!-- Modal section STOP (POP UP)-->
+
+    <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
+
 </body>
+
 </html>
