--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <article class="article-content">
             <h1 class="title">Mountain Kingdom</h1>
-            <a href="" class="btn" id="btn-click">ENTER THE GATES</a>
+            <a href="#" class="btn" id="btn-click">ENTER THE GATES</a>
         </article>
 
         <!-- Article STOP -->
@@ -63,20 +63,20 @@
 
         <div class="bg-modal">
             <div class="modal-content">
+                <div class="close">✕</div>
                 <h2>Are you a Mountain Knight?</h2>
                 <form action="">
                     <input type="text" placeholder="Email">
                     <input type="text" placeholder="Password">
-                    <a href="" class="btn btn-modal">LOG IN</a>
+                    <a href="#" class="btn btn-modal">LOG IN</a>
                 </form>
             </div>
         </div>
 
     </section>
 
-    <!-- Modal section STOP (POP UP)-->
+    <!-- Modal section (POP UP) STOP-->
 
-    <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
 
 </body>
