--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
   <body>
     <section class="main-container">
-        
       <!-- Header -->
 
       <header>
@@ -88,6 +87,7 @@
 
     <!-- Modal section (POP UP) STOP-->
 
+    <!-- jQuery, JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="script.js"></script>
   </body>
