--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li class="footer-item">&copy; 2019 &ensp; MOUNTAIN KINGDOM</li>
           <li class="footer-item">Cookies &ensp;| &ensp; Privacy</li>
           <li class="footer-item">
-            Design by &ensp; <span class="lighter-text"> Wizard of Oz </span>
+            Design by &ensp; <span class="lighter-text"> Klaudia Romanowska </span>
           </li>
         </ul>
       </footer>
@@ -89,6 +89,8 @@
         </div>
       </div>
     </section>
+
+    <!-- class="btn btn-modal" -->
 
     <!-- Modal section (POP UP) STOP-->
 
